# xa

./: .gitignore  Cargo.toml  DESIGN.md  PLAN.md  README.md  install.sh
.qoder/: settings.local.json
src/: main.rs
src/agent/: mod.rs
src/config/: mod.rs
src/llm/: mod.rs
src/output/: mod.rs
src/output_filter/: mod.rs
src/output_filter/filters/: cargo.rs  common.rs  default.rs  git.rs  mod.rs  python.rs  system.rs  tests.rs
src/prompt/: mod.rs
src/session/: mod.rs
src/store/: mod.rs
src/tools/: mod.rs
src/tui/: app.rs  cells.rs  crash.rs  mod.rs  render.rs  resume.rs  shimmer.rs  slash.rs  theme.rs  think.rs  wizard.rs
src/tui/theme/: detect.rs
src/utils/: mod.rs
