[package]
name = "xa"
version = "0.1.0"
edition = "2021"
description = "Execute Anything via LLM - A CLI tool for arbitrary text processing using LLMs"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full", "signal"] }
tokio-stream = "0.1"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
clipboard = "0.5"
termimad = "0.28"
fuzzy-matcher = "0.3"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
