[package]
name = "xa"
version = "0.1.2"
edition = "2021"
description = "Execute Anything via LLM - A CLI tool for arbitrary text processing using LLMs"
authors = ["jinfagang19@163.com"]
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full", "signal"] }
tokio-stream = "0.1"
clap = { version = "4.0", features = ["derive"] }
toml = "1.1.3"
dirs = "6.0"
clipboard = "0.5"
termimad = "0.35.1"
fuzzy-matcher = "0.3"
indicatif = "0.18.6"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
# Use the same pure-Rust TLS backend as XA's direct HTTP client; the default
# enables native-tls/OpenSSL as a second, otherwise unused TLS implementation.
openai-api-rs = { version = "10.0.1", default-features = false, features = ["rustls"] }
# `ratatui-markdown` 0.3 and `tui-textarea` 0.7 currently share the 0.29
# Ratatui API. Keeping the direct dependency aligned prevents two incompatible
# widget/type families from entering the TUI build.
ratatui = "0.29.0"
crossterm = "0.29"
tui-textarea = { version = "0.7", features = ["crossterm", "ratatui"] }
# Keep XA's markdown renderer and supported syntax highlighters, but omit
# ratatui-markdown's unused image, Mermaid, viewer, preview, scroll, and tree
# modules (all enabled by that crate's default feature set).
ratatui-markdown = { version = "0.3", default-features = false, features = [
    "markdown",
    "highlight-lang-rust",
    "highlight-lang-python",
    "highlight-lang-javascript",
    "highlight-lang-typescript",
    "highlight-lang-go",
    "highlight-lang-bash",
    "highlight-lang-json",
    "highlight-lang-yaml",
    "highlight-lang-toml",
    "highlight-lang-c",
    "highlight-lang-cpp",
    "highlight-lang-diff",
    "highlight-lang-html",
    "highlight-lang-css",
    "highlight-lang-sql",
    "highlight-lang-ruby",
] }
regex = "1"
unicode-width = "0.2"
similar = "3.1.1"

[profile.release]
opt-level = "z"
strip = true
debug = false
lto = true
codegen-units = 1
panic = "abort"
